# server/src/router/problem.ts
@@ -1,9 +1,8 @@
 import express from 'express';
-import {problemCreate,problemGetByType,problemGetAll, problemsGetbyId} from '../controllers/problem';
+import {problemCreate,problemGetByType, problemsGetbyId} from '../controllers/problem';
 
 export default (router: express.Router) => {
     router.post('/problem/create', problemCreate)
     router.post('/problem/getByType', problemGetByType)
-    router.get('/problem/getAll', problemGetAll)
     router.post('/problem/:id', problemsGetbyId);
 }
