# server/src/swagger.json
@@ -80,22 +80,6 @@
         }
       }
     },
-    "/problem/getAll": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
-      }
-    },
     "/problem/{id}": {
       "post": {
         "description": "",
